# nikePlus-SportWatchGPS

./: AUTHORS  INSTALL_DRIVER_AND_GUI  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
gui/: README.TXT  run
src/: BufferControl.cxx  BufferControl.h  Controller.cxx  Controller.h  ConvertControl.cxx  ConvertControl.h  DeviceCom.cxx  DeviceCom.h  Makefile.am  Makefile.in  Profile.cxx  Profile.h  main.cc
src/extra/: nike.py  public_nike_dec.c
src/python/: commads.py  nike.py  nike_v2.py  opscodes.py
udev/: 90-sportband.rules
